--- a/modpack/mods/mekalus-oculus-fork-with-fixed-mekanism-mekasuit.pw.toml
+++ b/modpack/mods/mekalus-oculus-fork-with-fixed-mekanism-mekasuit.pw.toml
@@ -1,6 +1,6 @@
 name = "Mekalus (Oculus fork with fixed Mekanism MekaSuit rendering)"
 filename = "mekalus-mc1.20.1-1.8.0.1.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
