Make a bunch of mods client only

--- a/modpack/mods/colorful-hearts.pw.toml
+++ b/modpack/mods/colorful-hearts.pw.toml
@@ -1,6 +1,6 @@
 name = "Colorful Hearts"
 filename = "colorfulhearts-forge-1.20.1-4.3.16.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
