--- a/modpack/mods/inventory-essentials.pw.toml
+++ b/modpack/mods/inventory-essentials.pw.toml
@@ -1,6 +1,6 @@
 name = "Inventory Essentials"
 filename = "inventoryessentials-forge-1.20.1-8.2.12.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
